<?xml version="1.0"?>
<package format="3">
  <name>lcm</name>
  <version>1.4.0</version>
  <description>Lightweight Communications and Marshalling</description>

  <maintainer email="todo@todo.todo">Albert Huang</maintainer>
  <author>Albert Huang</author>

  <license>LGPL-v2.1</license>
  <url>https://lcm-proj.github.io</url>

  <!-- The following tag is recommended by REP-136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>

  <!-- To build the Python bindings by default -->
  <build_depend condition="$ROS_PYTHON_VERSION == 2">python</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 3">python3</build_depend>

  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
